--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,7 @@ ol {
 }
 .section-item {
   position: relative;
+  padding: 50px 0;
 }
 .section-item .logo-wrap {
   width: 100%;
@@ -277,7 +278,7 @@ ol {
 .section-item.footer {
   background-color: #000;
   color: #fff;
-  padding: 0 0 50px;
+  padding: 0 0 25px;
 }
 .footer .logo {
   position: relative;
@@ -379,7 +380,7 @@ ol {
 @media (min-width: 768px) {
   .section-item .logo {
     position: absolute;
-    top: 75px;
+    top: 0;
     left: 15px;
     margin: 0;
   }
